--- a/style.css
+++ b/style.css
@@ -45,7 +45,8 @@ header{
     border-bottom: 1px solid #dce1e4;
     display: grid;
     grid-template-columns: 30% 70%;
-    background-color: var(--light);
+    background-color: rgba(255, 255, 255, 0.2); /* Semi-transparent background */
+    backdrop-filter: blur(10px); /* Blur effect */
     z-index: 1;
 }
 header .logo img{
